--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http="Expires" content="0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>avera.solutions</title>
+    <title>Avera.Solutions</title>
 
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -14,9 +14,98 @@
     <!-- tsParticles CDN -->
     <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.37.5/dist/tsparticles.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+        
+        body {
+            margin: 0;
+            font-family: 'Poppins', sans-serif;
+            background: radial-gradient(circle at top, #1a073d, black);
+            color: white;
+            text-align: center;
+            position: relative;
+        }
+
+        /* Particles container */
+        #tsparticles {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
+
+        h1 {
+            font-size: 50px;
+            margin-top: 100px;
+            font-weight: bold;
+        }
+
+        .content-wrapper {
+            margin-top: 50px;
+        }
+
+        h3 {
+            font-size: 18px;
+            margin-top: 20px;
+            color: #bbb;
+        }
+
+        .key-box {
+            background-color: rgba(255, 255, 255, 0.2);
+            padding: 10px 20px;
+            border-radius: 8px;
+            cursor: pointer;
+            display: inline-block;
+            font-weight: bold;
+        }
+
+        .key-box:hover {
+            background-color: rgba(255, 255, 255, 0.3);
+        }
+
+        button {
+            background-color: #5865F2;
+            color: white;
+            border: none;
+            padding: 12px 25px;
+            border-radius: 8px;
+            font-size: 16px;
+            margin-top: 20px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #4752c4;
+        }
+
+        #dark-mode-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: rgba(0, 0, 0, 0.6);
+            color: white;
+            border: none;
+            padding: 10px;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+
+        .notification {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 15px 30px;
+            border-radius: 8px;
+            font-size: 16px;
+        }
+    </style>
 </head>
-<body class="dark-mode"> <!-- Dark mode by default -->
+<body>
 
     <!-- Particles container -->
     <div id="tsparticles"></div>
