--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             color: white;
             text-align: center;
             position: relative;
+            overflow: hidden;
         }
 
         /* Particles container */
@@ -40,10 +41,13 @@
             font-size: 50px;
             margin-top: 100px;
             font-weight: bold;
+            color: #fff;
         }
 
         .content-wrapper {
-            margin-top: 50px;
+            margin-top: 40px;
+            padding: 20px;
+            text-align: center;
         }
 
         h3 {
@@ -54,15 +58,15 @@
 
         .key-box {
             background-color: rgba(255, 255, 255, 0.2);
-            padding: 10px 20px;
+            padding: 12px 24px;
             border-radius: 8px;
             cursor: pointer;
-            display: inline-block;
             font-weight: bold;
+            transition: background-color 0.3s ease;
         }
 
         .key-box:hover {
-            background-color: rgba(255, 255, 255, 0.3);
+            background-color: rgba(255, 255, 255, 0.4);
         }
 
         button {
@@ -74,6 +78,7 @@
             font-size: 16px;
             margin-top: 20px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
 
         button:hover {
@@ -90,6 +95,7 @@
             padding: 10px;
             border-radius: 50%;
             cursor: pointer;
+            z-index: 1000;
         }
 
         .notification {
