--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
-            background: radial-gradient(circle at top, #1a073d, black);
+            background: linear-gradient(45deg, #1a073d, #000); /* More dynamic background gradient */
             color: white;
             text-align: center;
             position: relative;
             overflow: hidden;
+            height: 100vh;
         }
 
         /* Particles container */
@@ -39,7 +40,7 @@
 
         h1 {
             font-size: 50px;
-            margin-top: 100px;
+            margin-top: 150px;
             font-weight: bold;
             color: #fff;
         }
@@ -53,7 +54,7 @@
         h3 {
             font-size: 18px;
             margin-top: 20px;
-            color: #bbb;
+            color: #ddd;
         }
 
         .key-box {
@@ -63,6 +64,8 @@
             cursor: pointer;
             font-weight: bold;
             transition: background-color 0.3s ease;
+            margin: 10px 0;
+            display: inline-block;
         }
 
         .key-box:hover {
