--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
             border-radius: 8px;
             font-size: 16px;
         }
+
+        /* Image styling */
+        .image-container {
+            margin-top: 40px;
+            padding-bottom: 50px;
+        }
+
+        .image-container img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+        }
     </style>
 </head>
 <body>
@@ -130,6 +143,11 @@
         <a href="./files/avera-solutions.exe" target="_blank">
             <button>Install Loader</button>
         </a>
+    </div>
+
+    <!-- Add Image below content -->
+    <div class="image-container">
+        <img src="https://i.imgur.com/572cZav.gif" alt="Avera Solutions Animation">
     </div>
 
     <!-- Dark Mode / Light Mode Toggle -->
