--- a/index.html
+++ b/index.html
@@ -17,15 +17,23 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
         
+        /* General Body Styles */
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(45deg, #1a073d, #000); /* More dynamic background gradient */
+            background: linear-gradient(45deg, #1a073d, #000); /* Default background gradient */
             color: white;
             text-align: center;
             position: relative;
             overflow: hidden;
             height: 100vh;
+            transition: background 0.3s ease, color 0.3s ease; /* Smooth transition between modes */
+        }
+
+        /* Dark Mode Overrides */
+        body.dark-mode {
+            background: linear-gradient(45deg, #333, #000); /* Dark mode gradient */
+            color: white;
         }
 
         /* Particles container */
