--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
@@ -16,7 +17,7 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
-        
+
         /* General Body Styles */
         body {
             margin: 0;
@@ -47,16 +48,20 @@
         }
 
         h1 {
-            font-size: 50px;
-            margin-top: 150px;
+            font-size: 48px;
+            margin-top: 80px;
             font-weight: bold;
             color: #fff;
+            letter-spacing: -1px;
         }
 
         .content-wrapper {
             margin-top: 40px;
             padding: 20px;
             text-align: center;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         h3 {
@@ -133,8 +138,81 @@
             border-radius: 15px;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
         }
+
+        /* Rating Section Styles */
+        .rating-section {
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 40px;
+            border-radius: 10px;
+            margin-top: 50px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .rating-section h2 {
+            color: white;
+            font-size: 30px;
+            margin-bottom: 20px;
+        }
+
+        .stars {
+            font-size: 24px;
+            color: #FFD700;
+        }
+
+        /* YouTube Video Embed Styling */
+        .video-container {
+            margin-top: 40px;
+        }
+
+        .video-container iframe {
+            width: 100%;
+            max-width: 800px;
+            height: 450px;
+            border-radius: 10px;
+        }
+
+        /* Feedback Section */
+        .feedback-form {
+            margin-top: 40px;
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.4);
+            border-radius: 8px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .feedback-form input,
+        .feedback-form textarea {
+            width: 100%;
+            padding: 12px;
+            margin: 10px 0;
+            border-radius: 8px;
+            border: none;
+            background-color: rgba(255, 255, 255, 0.1);
+            color: white;
+            font-size: 16px;
+        }
+
+        .feedback-form button {
+            background-color: #FFD700;
+            color: black;
+            padding: 12px 25px;
+            border-radius: 8px;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .feedback-form button:hover {
+            background-color: #F8C400;
+        }
+
     </style>
 </head>
+
 <body>
 
     <!-- Particles container -->
@@ -143,19 +221,37 @@
     <h1>Avera.Solutions</h1>
 
     <div class="content-wrapper">
-        <!-- Box around the Key text, which can be clicked to copy -->
-        <h3>
-            Key: <span id="key-box" class="key-box" onclick="copyKey()">avera.solutions</span>
-        </h3>
-
+        <h3>Key: <span id="key-box" class="key-box" onclick="copyKey()">avera.solutions</span></h3>
         <a href="./files/avera-solutions.exe" target="_blank">
             <button>Install Loader</button>
         </a>
     </div>
 
-    <!-- Add Image below content -->
-    <div class="image-container">
-        <img src="https://i.imgur.com/572cZav.gif" alt="Avera Solutions Animation">
+    <!-- YouTube Video Embed -->
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/VIDEO_ID_HERE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <!-- Feedback Section -->
+    <div class="feedback-form">
+        <h2>Leave Your Feedback</h2>
+        <form action="#" method="post">
+            <input type="text" placeholder="Your Name" required>
+            <textarea placeholder="Your Feedback" rows="4" required></textarea>
+            <button type="submit">Submit Feedback</button>
+        </form>
+    </div>
+
+    <!-- Rating Section -->
+    <div class="rating-section">
+        <h2>Rate Us</h2>
+        <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+        </div>
     </div>
 
     <!-- Dark Mode / Light Mode Toggle -->
@@ -274,4 +370,5 @@
         }
     </script>
 </body>
+
 </html>
