--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
             color: white;
             text-align: center;
             position: relative;
-            overflow: hidden;
-            height: 100vh;
+            min-height: 100vh;
+            padding-bottom: 50px; /* Ensure space for scrolling */
+            overflow-x: hidden; /* Prevent horizontal scroll */
             transition: background 0.3s ease, color 0.3s ease; /* Smooth transition between modes */
         }
 
