--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http="Expires" content="0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avera.Solutions</title>
 
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-    <!-- tsParticles CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.37.5/dist/tsparticles.min.js"></script>
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
@@ -38,16 +32,6 @@
             color: white;
         }
 
-        /* Particles container */
-        #tsparticles {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-        }
-
         h1 {
             font-size: 48px;
             margin-top: 80px;
@@ -56,37 +40,33 @@
             letter-spacing: -1px;
         }
 
-        .content-wrapper {
+        /* Carousel Container */
+        .carousel-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             margin-top: 40px;
             padding: 20px;
+            position: relative;
+        }
+
+        .carousel-content {
+            display: none;
             text-align: center;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
         }
 
-        h3 {
-            font-size: 18px;
-            margin-top: 20px;
-            color: #ddd;
+        .carousel-content.active {
+            display: block;
         }
 
-        .key-box {
-            background-color: rgba(255, 255, 255, 0.2);
-            padding: 12px 24px;
-            border-radius: 8px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background-color 0.3s ease;
-            margin: 10px 0;
-            display: inline-block;
+        .carousel-content img {
+            max-width: 80%;
+            height: auto;
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
         }
 
-        .key-box:hover {
-            background-color: rgba(255, 255, 255, 0.4);
-        }
-
-        button {
+        .carousel-button {
             background-color: #5865F2;
             color: white;
             border: none;
@@ -98,10 +78,34 @@
             transition: background-color 0.3s ease;
         }
 
-        button:hover {
+        .carousel-button:hover {
             background-color: #4752c4;
         }
 
+        /* Arrow buttons */
+        .arrow-button {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            border: none;
+            padding: 10px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 20px;
+            z-index: 10;
+        }
+
+        .arrow-left {
+            left: 10px;
+        }
+
+        .arrow-right {
+            right: 10px;
+        }
+
+        /* Dark Mode / Light Mode Toggle */
         #dark-mode-toggle {
             position: fixed;
             top: 20px;
@@ -115,46 +119,50 @@
             z-index: 1000;
         }
 
-        .notification {
-            position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 15px 30px;
-            border-radius: 8px;
-            font-size: 16px;
-        }
-
-        /* Image styling */
-        .image-container {
-            margin-top: 40px;
-            padding-bottom: 50px;
-        }
-
-        .image-container img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 15px;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
-        }
-
     </style>
 </head>
 
 <body>
 
-    <!-- Particles container -->
-    <div id="tsparticles"></div>
-
     <h1>Avera.Solutions</h1>
 
-    <div class="content-wrapper">
-        <h3>Key: <span id="key-box" class="key-box" onclick="copyKey()">avera.solutions</span></h3>
-        <a href="./files/avera-solutions.exe" target="_blank">
-            <button>Install Loader</button>
-        </a>
+    <!-- Carousel Section -->
+    <div class="carousel-container">
+
+        <!-- Arrow Left -->
+        <button class="arrow-button arrow-left" onclick="moveCarousel(-1)">
+            <i class="fas fa-chevron-left"></i>
+        </button>
+
+        <!-- Carousel Content -->
+        <div class="carousel-content active" id="carousel1">
+            <img src="https://via.placeholder.com/400x200?text=FiveM+Image" alt="FiveM">
+            <h3>FiveM</h3>
+            <a href="https://example.com/fivem" target="_blank">
+                <button class="carousel-button">Download FiveM</button>
+            </a>
+        </div>
+
+        <div class="carousel-content" id="carousel2">
+            <img src="https://via.placeholder.com/400x200?text=Spoofer+Image" alt="Spoofer">
+            <h3>Spoofer</h3>
+            <a href="https://example.com/spoofer" target="_blank">
+                <button class="carousel-button">Download Spoofer</button>
+            </a>
+        </div>
+
+        <div class="carousel-content" id="carousel3">
+            <img src="https://via.placeholder.com/400x200?text=Valorant+Image" alt="Valorant">
+            <h3>Valorant</h3>
+            <a href="https://example.com/valorant" target="_blank">
+                <button class="carousel-button">Download Valorant</button>
+            </a>
+        </div>
+
+        <!-- Arrow Right -->
+        <button class="arrow-button arrow-right" onclick="moveCarousel(1)">
+            <i class="fas fa-chevron-right"></i>
+        </button>
     </div>
 
     <!-- Dark Mode / Light Mode Toggle -->
@@ -163,96 +171,28 @@
     </button>
 
     <script>
-        // Initialize tsParticles
-        tsParticles.load("tsparticles", {
-            particles: {
-                number: {
-                    value: 100,
-                    density: {
-                        enable: true,
-                        value_area: 800
-                    }
-                },
-                shape: {
-                    type: "circle"
-                },
-                color: {
-                    value: "#7800d2"  // Main color of particles
-                },
-                opacity: {
-                    value: 0.5,
-                    random: true,
-                    animation: {
-                        enable: true,
-                        speed: 1,
-                        minimumValue: 0.1
-                    }
-                },
-                size: {
-                    value: 3,
-                    random: true,
-                    animation: {
-                        enable: true,
-                        speed: 5,
-                        minimumValue: 1
-                    }
-                },
-                move: {
-                    enable: true,
-                    speed: 3,
-                    direction: "none",
-                    random: false,
-                    straight: false,
-                    outMode: "out",
-                    bounce: false
-                }
-            },
-            interactivity: {
-                detectsOn: "canvas",
-                events: {
-                    onhover: {
-                        enable: true,
-                        mode: "repulse"
-                    },
-                    onclick: {
-                        enable: true,
-                        mode: "push"
-                    }
-                }
+        // Keep track of the current carousel index
+        let currentIndex = 1;
+        const totalCarouselItems = 3;
+
+        // Function to change the carousel item based on left or right button click
+        function moveCarousel(direction) {
+            currentIndex += direction;
+
+            // If the index goes out of bounds, wrap it around
+            if (currentIndex > totalCarouselItems) {
+                currentIndex = 1;
             }
-        });
+            if (currentIndex < 1) {
+                currentIndex = totalCarouselItems;
+            }
 
-        // Function to copy the key text to the clipboard
-        function copyKey() {
-            const keyText = document.getElementById('key-box').textContent;
-            navigator.clipboard.writeText(keyText).then(function () {
-                // Notify the user that the text was copied
-                showNotification("Key copied to clipboard!");
+            // Hide all carousel items and show the one based on the current index
+            for (let i = 1; i <= totalCarouselItems; i++) {
+                document.getElementById('carousel' + i).classList.remove('active');
+            }
 
-                // Shrink the key box after copying
-                const keyBox = document.getElementById('key-box');
-                keyBox.style.transform = "scale(0.9)";
-
-                // Reset the size of the key box after a short delay
-                setTimeout(() => {
-                    keyBox.style.transform = "scale(1)";
-                }, 300);
-            }).catch(function (err) {
-                console.error('Error copying text: ', err);
-            });
-        }
-
-        // Show a notification
-        function showNotification(message) {
-            const notification = document.createElement('div');
-            notification.classList.add('notification');
-            notification.textContent = message;
-            document.body.appendChild(notification);
-
-            // Remove the notification after 3 seconds
-            setTimeout(() => {
-                notification.remove();
-            }, 3000);
+            document.getElementById('carousel' + currentIndex).classList.add('active');
         }
 
         // Toggle between dark and light mode
