--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             color: white;
             text-align: center;
             position: relative;
-            min-height: 100vh;
-            padding-bottom: 50px; /* Ensure space for scrolling */
-            overflow-x: hidden; /* Prevent horizontal scroll */
+            padding: 50px 0; /* Reduced padding to make it smaller */
+            overflow-x: hidden;
             transition: background 0.3s ease, color 0.3s ease; /* Smooth transition between modes */
+            min-height: 100vh;
         }
 
         /* Dark Mode Overrides */
@@ -33,8 +33,8 @@
         }
 
         h1 {
-            font-size: 48px;
-            margin-top: 80px;
+            font-size: 36px; /* Reduced font size */
+            margin-bottom: 30px; /* Reduced margin */
             font-weight: bold;
             color: #fff;
             letter-spacing: -1px;
@@ -45,14 +45,14 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 40px;
-            padding: 20px;
-            position: relative;
+            margin-top: 20px;
+            flex-direction: column;
         }
 
         .carousel-content {
             display: none;
             text-align: center;
+            margin: 20px;
         }
 
         .carousel-content.active {
@@ -60,7 +60,7 @@
         }
 
         .carousel-content img {
-            max-width: 80%;
+            max-width: 70%; /* Smaller images */
             height: auto;
             border-radius: 15px;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
@@ -82,29 +82,6 @@
             background-color: #4752c4;
         }
 
-        /* Arrow buttons */
-        .arrow-button {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background: rgba(0, 0, 0, 0.5);
-            color: white;
-            border: none;
-            padding: 10px;
-            border-radius: 50%;
-            cursor: pointer;
-            font-size: 20px;
-            z-index: 10;
-        }
-
-        .arrow-left {
-            left: 10px;
-        }
-
-        .arrow-right {
-            right: 10px;
-        }
-
         /* Dark Mode / Light Mode Toggle */
         #dark-mode-toggle {
             position: fixed;
@@ -118,7 +95,6 @@
             cursor: pointer;
             z-index: 1000;
         }
-
     </style>
 </head>
 
@@ -129,12 +105,7 @@
     <!-- Carousel Section -->
     <div class="carousel-container">
 
-        <!-- Arrow Left -->
-        <button class="arrow-button arrow-left" onclick="moveCarousel(-1)">
-            <i class="fas fa-chevron-left"></i>
-        </button>
-
-        <!-- Carousel Content -->
+        <!-- Carousel Content for FiveM -->
         <div class="carousel-content active" id="carousel1">
             <img src="https://via.placeholder.com/400x200?text=FiveM+Image" alt="FiveM">
             <h3>FiveM</h3>
@@ -143,6 +114,7 @@
             </a>
         </div>
 
+        <!-- Carousel Content for Spoofer -->
         <div class="carousel-content" id="carousel2">
             <img src="https://via.placeholder.com/400x200?text=Spoofer+Image" alt="Spoofer">
             <h3>Spoofer</h3>
@@ -151,6 +123,7 @@
             </a>
         </div>
 
+        <!-- Carousel Content for Valorant -->
         <div class="carousel-content" id="carousel3">
             <img src="https://via.placeholder.com/400x200?text=Valorant+Image" alt="Valorant">
             <h3>Valorant</h3>
@@ -158,11 +131,6 @@
                 <button class="carousel-button">Download Valorant</button>
             </a>
         </div>
-
-        <!-- Arrow Right -->
-        <button class="arrow-button arrow-right" onclick="moveCarousel(1)">
-            <i class="fas fa-chevron-right"></i>
-        </button>
     </div>
 
     <!-- Dark Mode / Light Mode Toggle -->
