--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 <body>
 
-    <h1>Avera.Solutions</h1>
+    <h1 class="title">Avera.Solutions</h1>
 
     <!-- Carousel Section -->
     <div class="carousel-container">
