--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avera.Solutions</title>
 
-    <!-- Link to external CSS file -->
+    <!-- External Styles -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
     <style>
-        /* General Body Styling */
+        /* Global Styles */
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
@@ -21,15 +19,13 @@
             color: white;
             text-align: center;
             padding: 50px 0;
-            overflow-x: hidden;
             transition: background 0.3s ease, color 0.3s ease;
             min-height: 100vh;
         }
 
-        /* Dark Mode Styling */
+        /* Dark Mode */
         body.dark-mode {
             background: linear-gradient(45deg, #333, #000);
-            color: white;
         }
 
         h1 {
@@ -44,10 +40,9 @@
             margin-bottom: 40px;
             padding: 10px;
             text-shadow: 0 4px 6px rgba(0, 0, 0, 0.5), 0 1px 3px rgba(0, 0, 0, 0.3);
-            transition: all 0.3s ease-in-out;
         }
 
-        /* Key Box Styling */
+        /* Key Box */
         .key-box-container {
             margin-top: 30px;
             padding: 20px;
@@ -72,58 +67,62 @@
             background-color: #5865F2;
         }
 
-        /* Arrow Section for Item Switching */
-        .item-container {
-            margin-top: 40px;
+        /* Carousel Styles */
+        .carousel-container {
             display: flex;
             justify-content: center;
             align-items: center;
             gap: 20px;
+            margin-top: 40px;
+            position: relative;
+            width: 80%;
+            max-width: 1200px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
-        .item {
+        .carousel-item {
             display: none;
             text-align: center;
+            width: 100%;
+            transition: opacity 0.5s ease;
         }
 
-        .item.active {
+        .carousel-item.active {
             display: block;
         }
 
-        .item img {
-            max-width: 100%;
+        .carousel-item img {
+            width: 100%;
+            max-width: 400px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
 
-        .arrow-button {
-            font-size: 36px;
-            background: rgba(0, 0, 0, 0.6);
+        .carousel-nav-button {
+            position: absolute;
+            top: 50%;
+            z-index: 1000;
+            background-color: rgba(0, 0, 0, 0.6);
             color: white;
             border: none;
             padding: 10px 20px;
             border-radius: 50%;
             cursor: pointer;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            font-size: 30px;
             transition: background 0.3s ease;
         }
 
-        .arrow-button:hover {
+        .carousel-nav-button:hover {
             background: #5865F2;
         }
 
-        /* Notification after copying */
-        .notification {
-            position: fixed;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 15px;
-            border-radius: 8px;
-            font-size: 16px;
-            display: none;
+        .carousel-prev {
+            left: 0;
+        }
+
+        .carousel-next {
+            right: 0;
         }
 
         /* Dark Mode / Light Mode Toggle */
@@ -140,6 +139,20 @@
             z-index: 1000;
         }
 
+        /* Notification */
+        .notification {
+            position: fixed;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 15px;
+            border-radius: 8px;
+            font-size: 16px;
+            display: none;
+        }
+
     </style>
 </head>
 
@@ -147,39 +160,36 @@
 
     <h1>Avera.Solutions</h1>
 
-    <!-- Key Box to Copy -->
+    <!-- Key Box -->
     <div class="key-box-container">
         <h3>
             Key: <span id="key-box" class="key-box" onclick="copyKey()">avera.solutions</span>
         </h3>
     </div>
 
-    <!-- Downloadable Options with Arrows -->
-    <div class="item-container">
-        <button class="arrow-button" id="prev-btn" onclick="prevItem()">&#10094;</button>
+    <!-- Carousel Section for Downloadable Items -->
+    <div class="carousel-container">
+        <button class="carousel-nav-button carousel-prev" onclick="prevItem()">&#10094;</button>
 
-        <!-- Item 1: FiveM -->
-        <div class="item active" id="item1">
+        <div class="carousel-item active" id="item1">
             <h3>FiveM</h3>
-            <img src="https://via.placeholder.com/300x200?text=FiveM" alt="FiveM">
+            <img src="https://via.placeholder.com/400x250?text=FiveM" alt="FiveM">
             <a href="#" class="btn">Download FiveM</a>
         </div>
 
-        <!-- Item 2: Spoofer -->
-        <div class="item" id="item2">
+        <div class="carousel-item" id="item2">
             <h3>Spoofer</h3>
-            <img src="https://via.placeholder.com/300x200?text=Spoofer" alt="Spoofer">
+            <img src="https://via.placeholder.com/400x250?text=Spoofer" alt="Spoofer">
             <a href="#" class="btn">Download Spoofer</a>
         </div>
 
-        <!-- Item 3: Valorant -->
-        <div class="item" id="item3">
+        <div class="carousel-item" id="item3">
             <h3>Valorant</h3>
-            <img src="https://via.placeholder.com/300x200?text=Valorant" alt="Valorant">
+            <img src="https://via.placeholder.com/400x250?text=Valorant" alt="Valorant">
             <a href="#" class="btn">Download Valorant</a>
         </div>
 
-        <button class="arrow-button" id="next-btn" onclick="nextItem()">&#10095;</button>
+        <button class="carousel-nav-button carousel-next" onclick="nextItem()">&#10095;</button>
     </div>
 
     <!-- Dark Mode / Light Mode Toggle -->
@@ -242,23 +252,22 @@
             }
         }
 
-        // Switch between items (left and right arrows)
+        // Carousel navigation
         let currentItem = 1;
+        const totalItems = 3;
 
         function nextItem() {
-            const totalItems = 3;
             currentItem = (currentItem % totalItems) + 1;
-            updateItems();
+            updateCarousel();
         }
 
         function prevItem() {
-            const totalItems = 3;
             currentItem = (currentItem - 2 + totalItems) % totalItems + 1;
-            updateItems();
+            updateCarousel();
         }
 
-        function updateItems() {
-            for (let i = 1; i <= 3; i++) {
+        function updateCarousel() {
+            for (let i = 1; i <= totalItems; i++) {
                 const item = document.getElementById('item' + i);
                 if (i === currentItem) {
                     item.classList.add('active');
