--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
 
         <div class="carousel-item active" id="item1">
             <h3>FiveM</h3>
-            <img src="https://via.placeholder.com/400x250?text=FiveM" alt="FiveM">
+            <!-- Added FiveM Logo Image -->
+            <img src="https://pluspng.com/img-png/fivem-logo-png-open-ports-on-your-router-for-fivem-512x512.png" alt="FiveM">
             <a href="#" class="btn">Download FiveM</a>
         </div>
 
