--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             background-color: #5865F2;
         }
 
-        /* Carousel Styles */
+        /* Carousel Container */
         .carousel-container {
             display: flex;
             justify-content: center;
@@ -76,9 +76,13 @@
             margin-top: 40px;
             position: relative;
             width: 80%;
-            max-width: 1200px;
+            max-width: 1000px;
             margin-left: auto;
             margin-right: auto;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
         }
 
         .carousel-item {
@@ -93,17 +97,23 @@
         }
 
         .carousel-item img {
-            width: 100%;
-            max-width: 400px;
+            width: 90%;
+            max-width: 350px;
+            height: auto;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease;
+        }
+
+        .carousel-item img:hover {
+            transform: scale(1.05);
         }
 
         .carousel-nav-button {
             position: absolute;
             top: 50%;
             z-index: 1000;
-            background-color: rgba(0, 0, 0, 0.6);
+            background-color: rgba(0, 0, 0, 0.7);
             color: white;
             border: none;
             padding: 10px 20px;
@@ -180,13 +190,13 @@
 
         <div class="carousel-item" id="item2">
             <h3>Spoofer</h3>
-            <img src="https://via.placeholder.com/400x250?text=Spoofer" alt="Spoofer">
+            <img src="https://via.placeholder.com/350x250?text=Spoofer" alt="Spoofer">
             <a href="#" class="btn">Download Spoofer</a>
         </div>
 
         <div class="carousel-item" id="item3">
             <h3>Valorant</h3>
-            <img src="https://via.placeholder.com/400x250?text=Valorant" alt="Valorant">
+            <img src="https://via.placeholder.com/350x250?text=Valorant" alt="Valorant">
             <a href="#" class="btn">Download Valorant</a>
         </div>
 
