--- a/index.html
+++ b/index.html
@@ -7,183 +7,29 @@
     <title>Avera.Solutions</title>
 
     <!-- External Styles -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-
-    <style>
-        /* Global Styles */
-        body {
-            margin: 0;
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(45deg, #1a073d, #000);
-            color: white;
-            text-align: center;
-            padding: 50px 0;
-            transition: background 0.3s ease, color 0.3s ease;
-            min-height: 100vh;
-        }
-
-        /* Dark Mode */
-        body.dark-mode {
-            background: linear-gradient(45deg, #333, #000);
-        }
-
-        h1 {
-            font-size: 48px;
-            font-weight: 600;
-            letter-spacing: -1px;
-            color: white;
-            background: linear-gradient(45deg, #7800d2, #00d4ff);
-            -webkit-background-clip: text;
-            background-clip: text;
-            text-transform: uppercase;
-            margin-bottom: 40px;
-            padding: 10px;
-            text-shadow: 0 4px 6px rgba(0, 0, 0, 0.5), 0 1px 3px rgba(0, 0, 0, 0.3);
-        }
-
-        /* Key Box */
-        .key-box-container {
-            margin-top: 30px;
-            padding: 20px;
-            border-radius: 12px;
-            background: rgba(255, 255, 255, 0.2);
-            display: inline-block;
-        }
-
-        .key-box {
-            font-size: 20px;
-            font-weight: bold;
-            color: #fff;
-            padding: 15px;
-            border: 2px solid #5865F2;
-            border-radius: 8px;
-            cursor: pointer;
-            background: rgba(0, 0, 0, 0.6);
-            transition: background-color 0.3s ease;
-        }
-
-        .key-box:hover {
-            background-color: #5865F2;
-        }
-
-        /* Carousel Container */
-        .carousel-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
-            margin-top: 40px;
-            position: relative;
-            width: 80%;
-            max-width: 1000px;
-            margin-left: auto;
-            margin-right: auto;
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
-        }
-
-        .carousel-item {
-            display: none;
-            text-align: center;
-            width: 100%;
-            transition: opacity 0.5s ease;
-        }
-
-        .carousel-item.active {
-            display: block;
-        }
-
-        .carousel-item img {
-            width: 90%;
-            max-width: 350px;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s ease;
-        }
-
-        .carousel-item img:hover {
-            transform: scale(1.05);
-        }
-
-        .carousel-nav-button {
-            position: absolute;
-            top: 50%;
-            z-index: 1000;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 50%;
-            cursor: pointer;
-            font-size: 30px;
-            transition: background 0.3s ease;
-        }
-
-        .carousel-nav-button:hover {
-            background: #5865F2;
-        }
-
-        .carousel-prev {
-            left: 0;
-        }
-
-        .carousel-next {
-            right: 0;
-        }
-
-        /* Dark Mode / Light Mode Toggle */
-        #dark-mode-toggle {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: rgba(0, 0, 0, 0.6);
-            color: white;
-            border: none;
-            padding: 10px;
-            border-radius: 50%;
-            cursor: pointer;
-            z-index: 1000;
-        }
-
-        /* Notification */
-        .notification {
-            position: fixed;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 15px;
-            border-radius: 8px;
-            font-size: 16px;
-            display: none;
-        }
-
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
 
-    <h1>Avera.Solutions</h1>
+    <header>
+        <h1>Avera.Solutions</h1>
+    </header>
 
     <!-- Key Box -->
-    <div class="key-box-container">
+    <section class="key-box-container">
         <h3>
             Key: <span id="key-box" class="key-box" onclick="copyKey()">avera.solutions</span>
         </h3>
-    </div>
+    </section>
 
     <!-- Carousel Section for Downloadable Items -->
-    <div class="carousel-container">
+    <section class="carousel-container">
         <button class="carousel-nav-button carousel-prev" onclick="prevItem()">&#10094;</button>
 
         <div class="carousel-item active" id="item1">
             <h3>FiveM</h3>
-            <!-- Added FiveM Logo Image -->
             <img src="https://pluspng.com/img-png/fivem-logo-png-open-ports-on-your-router-for-fivem-512x512.png" alt="FiveM">
             <a href="#" class="btn">Download FiveM</a>
         </div>
@@ -201,7 +47,7 @@
         </div>
 
         <button class="carousel-nav-button carousel-next" onclick="nextItem()">&#10095;</button>
-    </div>
+    </section>
 
     <!-- Dark Mode / Light Mode Toggle -->
     <button id="dark-mode-toggle" onclick="toggleDarkMode()">
@@ -213,82 +59,7 @@
         Key copied to clipboard!
     </div>
 
-    <script>
-        // Function to copy the key text to the clipboard
-        function copyKey() {
-            const keyText = document.getElementById('key-box').textContent;
-            navigator.clipboard.writeText(keyText).then(function () {
-                // Notify the user that the text was copied
-                showNotification("Key copied to clipboard!");
-
-                // Shrink the key box after copying
-                const keyBox = document.getElementById('key-box');
-                keyBox.style.transform = "scale(0.9)";
-
-                // Reset the size of the key box after a short delay
-                setTimeout(() => {
-                    keyBox.style.transform = "scale(1)";
-                }, 300);
-            }).catch(function (err) {
-                console.error('Error copying text: ', err);
-            });
-        }
-
-        // Show a notification
-        function showNotification(message) {
-            const notification = document.getElementById("notification");
-            notification.textContent = message;
-            notification.style.display = "block";
-
-            // Hide notification after 3 seconds
-            setTimeout(() => {
-                notification.style.display = "none";
-            }, 3000);
-        }
-
-        // Toggle between dark and light mode
-        function toggleDarkMode() {
-            const body = document.body;
-            const modeIcon = document.getElementById("mode-icon");
-
-            body.classList.toggle('dark-mode');
-
-            // Toggle between sun and moon icons
-            if (body.classList.contains('dark-mode')) {
-                modeIcon.classList.remove("fa-moon");
-                modeIcon.classList.add("fa-sun"); // Sun icon for light mode
-            } else {
-                modeIcon.classList.remove("fa-sun");
-                modeIcon.classList.add("fa-moon"); // Moon icon for dark mode
-            }
-        }
-
-        // Carousel navigation
-        let currentItem = 1;
-        const totalItems = 3;
-
-        function nextItem() {
-            currentItem = (currentItem % totalItems) + 1;
-            updateCarousel();
-        }
-
-        function prevItem() {
-            currentItem = (currentItem - 2 + totalItems) % totalItems + 1;
-            updateCarousel();
-        }
-
-        function updateCarousel() {
-            for (let i = 1; i <= totalItems; i++) {
-                const item = document.getElementById('item' + i);
-                if (i === currentItem) {
-                    item.classList.add('active');
-                } else {
-                    item.classList.remove('active');
-                }
-            }
-        }
-    </script>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
