--- a/index.html
+++ b/index.html
@@ -1,65 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avera.Solutions</title>
-
-    <!-- External Styles -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css"> <!-- Make sure the path is correct -->
 </head>
-
 <body>
 
-    <header>
-        <h1>Avera.Solutions</h1>
-    </header>
+    <h1>Avera.Solutions</h1>
 
-    <!-- Key Box -->
-    <section class="key-box-container">
-        <h3>
-            Key: <span id="key-box" class="key-box" onclick="copyKey()">avera.solutions</span>
-        </h3>
-    </section>
-
-    <!-- Carousel Section for Downloadable Items -->
-    <section class="carousel-container">
-        <button class="carousel-nav-button carousel-prev" onclick="prevItem()">&#10094;</button>
-
-        <div class="carousel-item active" id="item1">
-            <h3>FiveM</h3>
-            <img src="https://pluspng.com/img-png/fivem-logo-png-open-ports-on-your-router-for-fivem-512x512.png" alt="FiveM">
-            <a href="#" class="btn">Download FiveM</a>
+    <!-- Carousel Container -->
+    <div class="carousel-container">
+        <!-- First Item (FiveM) -->
+        <div id="item1" class="carousel-item active">
+            <img src="https://pluspng.com/img-png/fivem-logo-png-open-ports-on-your-router-for-fivem-512x512.png" alt="FiveM Logo">
+            <p>FiveM</p>
         </div>
 
-        <div class="carousel-item" id="item2">
-            <h3>Spoofer</h3>
-            <img src="https://via.placeholder.com/350x250?text=Spoofer" alt="Spoofer">
-            <a href="#" class="btn">Download Spoofer</a>
+        <!-- Second Item (Spoofer) -->
+        <div id="item2" class="carousel-item">
+            <img src="https://i.imgur.com/vX0l4Kn.png" alt="Spoofer Logo"> <!-- Change to your desired image URL -->
+            <p>Spoofer</p>
         </div>
 
-        <div class="carousel-item" id="item3">
-            <h3>Valorant</h3>
-            <img src="https://via.placeholder.com/350x250?text=Valorant" alt="Valorant">
-            <a href="#" class="btn">Download Valorant</a>
+        <!-- Third Item (Valorant) -->
+        <div id="item3" class="carousel-item">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Valorant_logo_2021.svg/1200px-Valorant_logo_2021.svg.png" alt="Valorant Logo">
+            <p>Valorant</p>
         </div>
 
-        <button class="carousel-nav-button carousel-next" onclick="nextItem()">&#10095;</button>
-    </section>
-
-    <!-- Dark Mode / Light Mode Toggle -->
-    <button id="dark-mode-toggle" onclick="toggleDarkMode()">
-        <i id="mode-icon" class="fas fa-moon"></i>
-    </button>
-
-    <!-- Notification after copying -->
-    <div id="notification" class="notification">
-        Key copied to clipboard!
+        <!-- Carousel Navigation -->
+        <button class="carousel-nav-button carousel-prev" onclick="prevItem()">&#8249;</button>
+        <button class="carousel-nav-button carousel-next" onclick="nextItem()">&#8250;</button>
     </div>
 
-    <script src="script.js"></script>
-</body>
+    <!-- Key Box -->
+    <div class="key-box-container">
+        <span id="key-box" class="key-box" onclick="copyKey()">avera.solutions</span>
+    </div>
 
+    <!-- Dark Mode Toggle Button -->
+    <button id="dark-mode-toggle" onclick="toggleDarkMode()">
+        <i id="mode-icon" class="fas fa-moon"></i> <!-- Initial Moon icon for dark mode -->
+    </button>
+
+    <!-- Notification -->
+    <div id="notification" class="notification"></div>
+
+    <script src="script.js"></script> <!-- Make sure the path is correct -->
+</body>
 </html>
